--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,4 +215,64 @@ body {
     background: #4aaaa5;
     border: 0 none;
   }
+
+  @media only screen and (max-width: 980px) {
+    .container {
+        /* padding: 0 20px; */
+        max-width: 60%;
+    }
+/* fix nav bar so that they move right about 30% */
+
+    .work {
+        width: 46%;
+    }
+    /* #main-container {
+        padding-top:130px;
+    } */
+    /* .main-section {
+        max-width: 730px;
+    } */
+  }
   
+  @media only screen and (max-width: 768px) {
+    .container {
+        max-width: 90%;
+    }
+    /* .main-container {
+        margin-bottom: 400px;
+    } */
+
+    /* make cat image take up 50% of max width of container */
+  }
+
+  @media only screen and (max-width: 640px) {
+    .container {
+        max-width: 90%;
+    }
+    #masthead {
+        position: static;
+        /* margin-top: 0px; */
+    }
+    #logo {
+        width: 100%;
+    }
+    nav {
+        width: 100%;
+        text-align: center;
+        margin: 10px;
+    }
+    #main-container {
+        padding-top: 0%;
+    }
+    /* #auth-image {
+        max-width: 470px;
+    } */
+    /* #main-section {
+        margin-bottom: 500px;
+    } */
+    .work {
+        width: 90%;
+    }
+
+    /* make cat image on index take up 100% max width of container */
+  }
