--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,61 +218,58 @@ body {
 
   @media only screen and (max-width: 980px) {
     .container {
-        /* padding: 0 20px; */
-        max-width: 60%;
+      max-width: 60%;
     }
-/* fix nav bar so that they move right about 30% */
 
     .work {
-        width: 46%;
+      width: 46%;
     }
-    /* #main-container {
-        padding-top:130px;
-    } */
-    /* .main-section {
-        max-width: 730px;
-    } */
+
+    nav {
+      margin-right: 2%;
+      font-size: 16px;
   }
-  
+}
+
   @media only screen and (max-width: 768px) {
     .container {
-        max-width: 90%;
+      max-width: 90%;
     }
-    /* .main-container {
-        margin-bottom: 400px;
-    } */
-
-    /* make cat image take up 50% of max width of container */
+    .cat-pic {
+      height:50%;
+      width: 50%;
+      margin-bottom: 1%;
+    }
   }
 
   @media only screen and (max-width: 640px) {
     .container {
-        max-width: 90%;
+      max-width: 90%;
     }
     #masthead {
-        position: static;
-        /* margin-top: 0px; */
+      position: static;
     }
+
     #logo {
-        width: 100%;
+      width: 100%;
     }
+
     nav {
-        width: 100%;
-        text-align: center;
-        margin: 10px;
+      width: 100%;
+      text-align: center;
+      margin: 10px;
     }
+
     #main-container {
         padding-top: 0%;
     }
-    /* #auth-image {
-        max-width: 470px;
-    } */
-    /* #main-section {
-        margin-bottom: 500px;
-    } */
+
     .work {
         width: 90%;
     }
 
-    /* make cat image on index take up 100% max width of container */
+    .cat-pic {
+        height:50%;
+        width: 100%;
+    }
   }
